Added background image and image credits.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="grid-container">
-    <div class="item-img">img</div>
+    <div class="item-img">
+      <div class="credit">Photo by <a href="https://unsplash.com/@vklemen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Klemen Vrankar</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+    </div>
     <div class="item-intro">intro</div>
     <div class="item-form">form</div>
     <div class="item-button">button</div>
