Updated background banner with website logo.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <div class="grid-container">
     <div class="item-img">
+      <div class="odin-banner">
+        <img src="img/odin-lined.png" class="odin-img">
+        <h1 class="odin-title">ODIN</h1>
+      </div>
       <div class="credit">Photo by <a href="https://unsplash.com/@vklemen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Klemen Vrankar</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
     </div>
     <div class="item-intro">intro</div>
