--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
       </div>
       <div class="credit">Photo by <a href="https://unsplash.com/@vklemen?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Klemen Vrankar</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
     </div>
-    <div class="gap"></div>
     <div class="item-intro">
-      <div>
+      <div class="intro-paragraph" id="right-side-text">
         This is not a real online service! You know you need something
         like this in your life to help you realize your deepest dreams.
         Sign up <i>now</i> to get started.
-  
-        You <i>know</i> what to do.
+        <br><br>
+        You <i>know</i> you want to.
       </div>
     </div>
     <div class="item-form">form</div>
     <div class="item-button">button</div>
-    <div class="gap"></div>
   </div>
   <script src="script.js"></script>
 </body>
