Updated form layout.

--- a/index.html
+++ b/index.html
@@ -27,27 +27,26 @@
     </div>
     <div class="item-form">
       <form action="#" method="get">
-        <!-- <fieldset class="field">
-          <legend>Register Now!</legend> -->
-          
+        <div class="form-box">     
+          <h2>Lets do this!</h2>     
           <label for="first-name" class="field">
             <span class="label-text">First Name:</span>
-            <input type="text" id="first-name" name="first-name" required>
+            <input type="text" id="first-name" name="first-name" placeholder="John" required>
           </label> 
           
           <label for="last-name" class="field">
             <span class="label-text">Last Name:</span>
-            <input type="text" id="last-name" name="last-name" required>
+            <input type="text" id="last-name" name="last-name" placeholder="Doe" required>
           </label>
 
           <label for="email" class="field">
             <span class="label-text">Email:</span>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="example@mail.com" required>
           </label>
 
           <label for="phone-number" class="field">
             <span class="label-text">Phone:</span>
-            <input type="number" id="number" name="phone-number" placeholder="XXX-XXX-XXXX">
+            <input type="tel" id="phone-number" name="phone-number" placeholder="XXX-XXX-XXXX">
           </label>
 
           <label for="password" class="field">
@@ -61,12 +60,10 @@
             <input type="password" id="password-confirm" name="password-confirm" required
               minlength="5" maxlength="20">
           </label>
-
-        <!-- </fieldset> -->
-        <button type="submit" class="submit-button">Submit</button>
+          <button type="submit" class="submit-button">Create Account</button>
+        </div>
       </form>
     </div>
-    <div class="item-button"></div>
   </div>
   <script src="script.js"></script>
 </body>
