--- a/index.html
+++ b/index.html
@@ -28,37 +28,38 @@
     <div class="item-form">
       <form action="#" method="get">
         <div class="form-box">     
-          <h2>Lets do this!</h2>     
+          <h2 id="form-header">Lets do this!</h2>     
           <label for="first-name" class="field">
-            <span class="label-text">First Name:</span>
+            <span class="label-text">*First Name:</span>
             <input type="text" id="first-name" name="first-name" placeholder="John" required>
+            <div class="error"></div>
           </label> 
-          
           <label for="last-name" class="field">
-            <span class="label-text">Last Name:</span>
+            <span class="label-text">*Last Name:</span>
             <input type="text" id="last-name" name="last-name" placeholder="Doe" required>
+            <div class="error"></div>
           </label>
-
           <label for="email" class="field">
-            <span class="label-text">Email:</span>
+            <span class="label-text">*Email:</span>
             <input type="email" id="email" name="email" placeholder="example@mail.com" required>
+            <div class="error"></div>
           </label>
-
           <label for="phone-number" class="field">
             <span class="label-text">Phone:</span>
             <input type="tel" id="phone-number" name="phone-number" placeholder="XXX-XXX-XXXX">
+            <div class="error"></div>
           </label>
-
           <label for="password" class="field">
-            <span class="label-text">Password:</span>
+            <span class="label-text">*Password:</span>
             <input type="password" id="password" name="password" required
               minlength="5" maxlength="20">
+              <div class="error"></div>
           </label>
-
           <label for="password-confirm" class="field">
-            <span class="label-text">Confirm Password:</span>
+            <span class="label-text">*Confirm Password:</span>
             <input type="password" id="password-confirm" name="password-confirm" required
               minlength="5" maxlength="20">
+            <div class="error"></div>
           </label>
           <button type="submit" class="submit-button">Create Account</button>
         </div>
